fix sampling and utility and add new fairness constraints

--- a/viral_marketing_expected_utility.ipynb
+++ b/viral_marketing_expected_utility.ipynb
@@ -101,9 +101,12 @@
     "def convert_constraint1(marketed, buy):\n",
     "    #marketed(u) & user(u) ->buy(u)\n",
     "    constraint = []\n",
+    "    obj_function = 0.0\n",
     "    for uid,value in buy.items():\n",
+    "        obj_function+=cvxpy.pos(marketed[uid]-buy[uid])\n",
     "        constraint.append(cvxpy.pos(marketed[uid]-buy[uid]))\n",
-    "    return constraint"
+    "        #constraint.append(marketed[uid]-buy[uid]<=0)\n",
+    "    return constraint,obj_function"
    ]
   },
   {
@@ -117,11 +120,14 @@
     "def convert_constraint2(reachable, buy):\n",
     "    #reachable(u,v) & buy(u) -> buy(v)\n",
     "    constraint = []\n",
+    "    obj_function = 0.0\n",
     "    for edge,value in reachable.items():\n",
     "        u = edge[0]\n",
     "        v = edge[1]\n",
-    "        constraint.append(cvxpy.pos(buy[v] - cvxpy.pos(float(value) - buy[u])))\n",
-    "    return constraint"
+    "        obj_function+=cvxpy.pos(cvxpy.pos(float(value)+buy[u]-1.0) - buy[u])\n",
+    "        constraint.append(cvxpy.pos(cvxpy.pos(float(value)+buy[u]-1.0) - buy[u]))\n",
+    "        #constraint.append(float(value)+buy[u]-buy[v]<=1)\n",
+    "    return constraint, obj_function"
    ]
   },
   {
@@ -151,7 +157,10 @@
    },
    "outputs": [],
    "source": [
-    "def convert_fairness_constraint(sensitive, buy, delta):\n",
+    "def convert_fairness_constraint1(sensitive, buy, delta):\n",
+    "    # buy(u) & sensitive(u)\n",
+    "    # buy(u) & ~sensitive(u)\n",
+    "    \n",
     "    constraint = []\n",
     "    sum_protected = 0\n",
     "    sum_unprotected = 0\n",
@@ -171,6 +180,41 @@
   {
    "cell_type": "code",
    "execution_count": 10,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def convert_fairness_constraint2(sensitive, reachable, marketed, delta):\n",
+    "    # marketed(u) & reachable (u,v) & sensitive (v)\n",
+    "    # marketed(u) & reachable (u,v) & ~sensitive (v)\n",
+    "    sum_protected = 0\n",
+    "    sum_unprotected = 0\n",
+    "    constraint = []\n",
+    "    sensitive_dict = dict()\n",
+    "    for s in sensitive:\n",
+    "        uid = s[0]\n",
+    "        value = float(s[1])\n",
+    "        sensitive_dict[uid] = value\n",
+    "    for edge,value in reachable.items():\n",
+    "        u = edge[0]\n",
+    "        v = edge[1]\n",
+    "        if sensitive_dict[v]==1.0:\n",
+    "            sum_protected+= cvxpy.pos(marketed[u]+float(value)-1)\n",
+    "            sum_unprotected += 0\n",
+    "        else:\n",
+    "            sum_protected+= 0\n",
+    "            sum_unprotected += cvxpy.pos(marketed[u]+float(value)-1)\n",
+    "    protected = sum_protected - sum_unprotected\n",
+    "    unprotected = sum_unprotected - sum_protected\n",
+    "    constraint+=[ protected<=delta , unprotected<=delta]\n",
+    "    return constraint\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
@@ -210,19 +254,21 @@
       "\n",
       "Sensitive\n",
       "==========\n",
-      "[('u0', 0.0), ('u1', 0.0), ('u2', 1.0), ('u3', 0.0), ('u4', 0.0)]\n",
-      "\n",
-      "Marketed results\n",
-      "==========\n",
-      "{'u2': 0.67576979871882537, 'u1': 0.2244983273797321, 'u4': 0.22449832741134768, 'u3': 0.22449832763895336, 'u0': 0.22449832780986273}\n",
-      "\n",
-      "Status of optimization\n",
-      "==========\n",
-      "optimal\n",
-      "\n",
-      "Optimal value\n",
-      "==========\n",
-      "20.009999999602403\n"
+      "[('u0', 0.0), ('u1', 0.0), ('u2', 1.0), ('u3', 0.0), ('u4', 0.0)]\n"
+     ]
+    },
+    {
+     "ename": "DCPError",
+     "evalue": "Problem does not follow DCP rules.",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mDCPError\u001b[0m                                  Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-11-c924b4561710>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m    152\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    153\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 154\u001b[0;31m \u001b[0mmake_optimization\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msample_size\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m10\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mbudget\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m2\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdelta\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m0.001\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    155\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    156\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-11-c924b4561710>\u001b[0m in \u001b[0;36mmake_optimization\u001b[0;34m(sample_size, budget, delta)\u001b[0m\n\u001b[1;32m    131\u001b[0m     \u001b[0mobjective\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcvxpy\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mMaximize\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mobjective_function\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    132\u001b[0m     \u001b[0mproblem\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcvxpy\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mProblem\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mobjective\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mconstraints\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 133\u001b[0;31m     \u001b[0mfinal_result\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mproblem\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msolve\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    134\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    135\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/Users/Gfarnadi/anaconda/lib/python3.5/site-packages/cvxpy/problems/problem.py\u001b[0m in \u001b[0;36msolve\u001b[0;34m(self, *args, **kwargs)\u001b[0m\n\u001b[1;32m    207\u001b[0m             \u001b[0;32mreturn\u001b[0m \u001b[0mfunc\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m*\u001b[0m\u001b[0margs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    208\u001b[0m         \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 209\u001b[0;31m             \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_solve\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0margs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    210\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    211\u001b[0m     \u001b[0;34m@\u001b[0m\u001b[0mclassmethod\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/Users/Gfarnadi/anaconda/lib/python3.5/site-packages/cvxpy/problems/problem.py\u001b[0m in \u001b[0;36m_solve\u001b[0;34m(self, solver, ignore_dcp, warm_start, verbose, parallel, **kwargs)\u001b[0m\n\u001b[1;32m    281\u001b[0m                       \"Solving a convex relaxation.\")\n\u001b[1;32m    282\u001b[0m             \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 283\u001b[0;31m                 \u001b[0;32mraise\u001b[0m \u001b[0mDCPError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Problem does not follow DCP rules.\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    284\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    285\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0msolver\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0ms\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mLS\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mDCPError\u001b[0m: Problem does not follow DCP rules."
      ]
     }
    ],
@@ -321,7 +367,6 @@
     "        reachables.append(reachable)\n",
     "     \n",
     "    # make the optimization problem \n",
-    "    objective_function = 0\n",
     "    for i in range (sample_size):\n",
     "        objective_function += make_objective(buys[i], reward)\n",
     "    \n",
@@ -330,15 +375,18 @@
     "    function_constraint_3 = convert_constraint3(marketed, cost, budget)\n",
     "    constraints+= function_constraint_3\n",
     "    for i in range (sample_size):\n",
-    "        function_constraint_1 = convert_constraint1(marketed, buys[i])\n",
+    "        function_constraint_1,obj_1 = convert_constraint1(marketed, buys[i])\n",
     "        constraints+=function_constraint_1\n",
-    "        function_constraint_2 = convert_constraint2(reachables[i], buys[i])\n",
-    "        #constraints+=function_constraint_2\n",
-    "        \n",
+    "        #objective_function+=1-obj_1\n",
+    "        function_constraint_2, obj_2 = convert_constraint2(reachables[i], buys[i])\n",
+    "        constraints+=function_constraint_2\n",
+    "        #objective_function+=1-obj_2\n",
     "    # make the fairness constraints\n",
     "    for i in range (sample_size):\n",
-    "        fairness_constraint = convert_fairness_constraint(sensitive, buys[i], delta)\n",
-    "        constraints+=fairness_constraint\n",
+    "        fairness_constraint1 = convert_fairness_constraint1(sensitive, buys[i], delta)\n",
+    "        constraints+=fairness_constraint1\n",
+    "        #fairness_constraint2 = convert_fairness_constraint2(sensitive, reachable, marketed, delta)\n",
+    "        #constraints+=fairness_constraint2\n",
     "        \n",
     "    # make the range constraints [0,1]\n",
     "    for var, value in var_dict.items():\n",
