--- a/viral_marketing_fairness_constraints.ipynb
+++ b/viral_marketing_fairness_constraints.ipynb
@@ -40,7 +40,7 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Constraint1\n",
+      "Fairness-Constraint1\n",
       "==========\n",
       "('u0', None, 0.0)\n",
       "('u1', None, 0.0)\n",
@@ -52,17 +52,50 @@
       "==========\n",
       "(0, 'person', 'string', 0, None, 0)\n",
       "(1, 't1', 'real', 0, None, 0)\n",
-      "(2, 't2', 'real', 0, None, 0)\n"
+      "(2, 't2', 'real', 0, None, 0)\n",
+      "\n",
+      "Fairness-Constraint2\n",
+      "==========\n",
+      "('u3', 'u1', None, None, None)\n",
+      "('u1', 'u3', None, None, None)\n",
+      "('u4', 'u1', None, None, None)\n",
+      "('u4', 'u0', None, None, None)\n",
+      "('u0', 'u1', None, None, None)\n",
+      "('u0', 'u3', None, None, None)\n",
+      "('u2', 'u4', None, None, None)\n",
+      "('u3', 'u1', None, None, None)\n",
+      "('u1', 'u3', None, None, None)\n",
+      "('u4', 'u1', None, None, None)\n",
+      "('u4', 'u0', None, None, None)\n",
+      "('u0', 'u1', None, None, None)\n",
+      "('u0', 'u3', None, None, None)\n",
+      "('u2', 'u4', None, None, None)\n",
+      "('u4', 'u3', None, None, None)\n",
+      "('u2', 'u0', None, None, None)\n",
+      "('u2', 'u1', None, None, None)\n",
+      "('u2', 'u3', None, None, None)\n",
+      "\n",
+      "Fairness2-info\n",
+      "==========\n",
+      "(0, 'person1', 'string', 0, None, 0)\n",
+      "(1, 'person2', 'string', 0, None, 0)\n",
+      "(2, 't1', 'real', 0, None, 0)\n",
+      "(3, 't2', 'real', 0, None, 0)\n",
+      "(4, 't3', 'real', 0, None, 0)\n"
      ]
     }
    ],
    "source": [
     "def ground_fairness_constraints():\n",
-    "    #Buy(u)∧Sensitive(u)\n",
+    "    # buy(u) & sensitive(u)\n",
+    "    # buy(u) & ~sensitive(u)\n",
+    "    \n",
+    "    # marketed(u) & reachable (u,v) & sensitive (v)\n",
+    "    # marketed(u) & reachable (u,v) & ~sensitive (v)\n",
     "    \n",
     "    #ground constraint 1\n",
     "    \n",
-    "    print('\\nConstraint1\\n%s'%('='*10))\n",
+    "    print('\\nFairness-Constraint1\\n%s'%('='*10))\n",
     "    query = 'DROP TABLE IF EXISTS fairness1'\n",
     "    c.execute(query)\n",
     "    conn.commit()\n",
@@ -87,10 +120,48 @@
     "    PRAGMA table_info(fairness1);\n",
     "    '''\n",
     "    test_query(query)\n",
+    "    \n",
+    "    \n",
+    "    print('\\nFairness-Constraint2\\n%s'%('='*10))\n",
+    "    query = 'DROP TABLE IF EXISTS fairness2'\n",
+    "    c.execute(query)\n",
+    "    conn.commit()\n",
+    "    \n",
+    "    query = ''' CREATE TABLE IF NOT EXISTS fairness2\n",
+    "            (person1 string, person2 string, t1 real, t2 real, t3 real)'''\n",
+    "    c.execute(query)\n",
+    "    \n",
+    "    \n",
+    "    query = '''INSERT INTO fairness2 (person1, person2, t2) SELECT person1, person2, truth FROM reachable \n",
+    "    '''\n",
+    "    c.execute(query)\n",
+    "    \n",
+    "    query = '''\n",
+    "    SELECT * from fairness2\n",
+    "    '''\n",
+    "    test_query(query)\n",
+    "    \n",
+    "    print('\\nFairness2-info\\n%s'%('='*10))\n",
+    "    \n",
+    "    query = '''\n",
+    "    PRAGMA table_info(fairness2);\n",
+    "    '''\n",
+    "    test_query(query)\n",
+    "    \n",
+    "    \n",
     "    conn.close()\n",
     "\n",
     "ground_fairness_constraints()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
