--- a/viral_marketing_sampling.ipynb
+++ b/viral_marketing_sampling.ipynb
@@ -44,6 +44,8 @@
     "    #trusts(a,b)->reachable(a,b)\n",
     "    #reachable(a,b) & trusts(b,c) -> reachable(a,c)\n",
     "    \n",
+    "    #print(state)\n",
+    "    #print(len(state))\n",
     "    prob_distribution = 0\n",
     "    \n",
     "    query1 = '''\n",
@@ -70,9 +72,10 @@
     "    \n",
     "    vid_dict = dict()\n",
     "    #print(len(reachables))\n",
+    "    \n",
     "    i = 0 \n",
     "    for r in reachables:\n",
-    "        vid_dict [(r[0],r[1])] = random.random()\n",
+    "        vid_dict [(r[0],r[1])] = state[i]\n",
     "        i+=1\n",
     "    #print (len(vid_dict))\n",
     "    \n",
@@ -93,17 +96,95 @@
     "            reachable2 = vid_dict [(r[0],r[2])]\n",
     "        else:\n",
     "            reachable2 = float(r[5])\n",
-    "        prob_distribution+=w2 * cvxpy.pos(reachable2 - cvxpy.pos(reachable1 - float(r[4])))\n",
+    "        prob_distribution+=w2 * cvxpy.pos(cvxpy.pos(reachable1 + float(r[4])-1.0) - reachable2)\n",
     "        \n",
     "        obj = cvxpy.Minimize(prob_distribution)\n",
     "        prob = cvxpy.Problem(obj, [])\n",
     "        result = prob.solve()\n",
     "        \n",
-    "    return result\n",
-    "\n",
-    "result = get_prob_distribution(w1 = 1 , w2 = 1 ,state = [])\n",
-    "#print('\\nProb_distribution\\n%s'%('='*10))\n",
-    "#print(result)"
+    "    return result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def prob_distribution_function(w1,w2):\n",
+    "    #trusts(a,b)->reachable(a,b)\n",
+    "    #reachable(a,b) & trusts(b,c) -> reachable(a,c)\n",
+    "    \n",
+    "    #print(state)\n",
+    "    #print(len(state))\n",
+    "    prob_distribution = 0\n",
+    "    \n",
+    "    query1 = '''\n",
+    "    SELECT * from rule1\n",
+    "    '''\n",
+    "    query2 = '''\n",
+    "    SELECT * from rule2\n",
+    "    '''\n",
+    "    query3 = '''\n",
+    "    SELECT * from reachable\n",
+    "    '''\n",
+    "    \n",
+    "    #print('\\nRule1\\n%s'%('='*10))\n",
+    "    rule1 = get_query_result(query1)\n",
+    "    #print(rule1)\n",
+    "    \n",
+    "    #print('\\nRule2\\n%s'%('='*10))\n",
+    "    rule2 = get_query_result(query2)\n",
+    "    #print(rule2)\n",
+    "    \n",
+    "    #print('\\nReachables\\n%s'%('='*10))\n",
+    "    reachables = get_query_result(query3)\n",
+    "    #print(reachables)\n",
+    "    \n",
+    "    vid_dict = dict()\n",
+    "    #print(len(reachables))\n",
+    "    \n",
+    "    i = 0 \n",
+    "    for r in reachables:\n",
+    "        vid_dict [(r[0],r[1])] = cvxpy.Variable()\n",
+    "        i+=1\n",
+    "    #print (len(vid_dict))\n",
+    "    \n",
+    "    \n",
+    "    for r in rule1:\n",
+    "        if r[3]==None:\n",
+    "            reachable = vid_dict [(r[0],r[1])]\n",
+    "        else:\n",
+    "            reachable = float(r[3])\n",
+    "        prob_distribution+=w1 * cvxpy.pos(reachable - float(r[2]))\n",
+    "        \n",
+    "    for r in rule2:\n",
+    "        if r[3]==None:\n",
+    "            reachable1 = vid_dict [(r[0],r[1])]\n",
+    "        else:\n",
+    "            reachable1 = float(r[3])\n",
+    "        if r[5]==None:\n",
+    "            reachable2 = vid_dict [(r[0],r[2])]\n",
+    "        else:\n",
+    "            reachable2 = float(r[5])\n",
+    "        prob_distribution+=w2 * cvxpy.pos(cvxpy.pos(reachable1 + float(r[4])-1.0) - reachable2)\n",
+    "        \n",
+    "    return prob_distribution,vid_dict"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def get_value_of_prob_distribution(prob_distribution, vid_dict, state):\n",
+    "    \n",
+    "    "
    ]
   },
   {
@@ -202,12 +283,14 @@
    "source": [
     "def sampling(w1, w2, rv_list, sample_size, rejection_size):\n",
     "    rv_size = len(rv_list)\n",
+    "    #print(rv_size)\n",
     "    initial_sample = initialize_variables(rv_size)\n",
     "    sample = []\n",
     "    sample.append(initial_sample)\n",
     "    i=0\n",
     "    while len(sample)<sample_size+rejection_size+1:\n",
     "        previous_state = sample[-1]\n",
+    "        #print(len(previous_state))\n",
     "        current_state = sample_from_distribution(previous_state, rv_size)\n",
     "        acceptace = get_acceptance_rate(w1, w2, current_state, previous_state)\n",
     "        if (acceptace>=1):\n",
@@ -222,7 +305,7 @@
     "                i+=1                   \n",
     "    return sample\n",
     "\n",
-    "samples = sampling(1 , 1 , ['r1','r2','r3'], 10, 10)\n",
+    "#samples = sampling(1 , 1 , ['r1','r2','r3'], 10, 10)\n",
     "#print(samples)"
    ]
   }
