--- a/viral_marketing_expected_utility.ipynb
+++ b/viral_marketing_expected_utility.ipynb
@@ -160,7 +160,7 @@
     "def convert_fairness_constraint1(sensitive, buy, delta):\n",
     "    # buy(u) & sensitive(u)\n",
     "    # buy(u) & ~sensitive(u)\n",
-    "    \n",
+    "    #TODO: fix this constraint to have ratio instead of sum\n",
     "    constraint = []\n",
     "    sum_protected = 0\n",
     "    sum_unprotected = 0\n",
