--- a/viral_marketing_sampling.ipynb
+++ b/viral_marketing_sampling.ipynb
@@ -183,7 +183,9 @@
    "outputs": [],
    "source": [
     "def get_value_of_prob_distribution(prob_distribution, vid_dict, state):\n",
-    "    \n",
+    "    value = 0.0\n",
+    "    #TODO: implement this part\n",
+    "    return value\n",
     "    "
    ]
   },
