fix relational fairness constraints and add a function for prob-distribution for speedup

--- a/viral_marketing_expected_utility.ipynb
+++ b/viral_marketing_expected_utility.ipynb
@@ -94,7 +94,7 @@
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -160,17 +160,24 @@
     "def convert_fairness_constraint1(sensitive, buy, delta):\n",
     "    # buy(u) & sensitive(u)\n",
     "    # buy(u) & ~sensitive(u)\n",
-    "    #TODO: fix this constraint to have ratio instead of sum\n",
     "    constraint = []\n",
-    "    sum_protected = 0\n",
-    "    sum_unprotected = 0\n",
+    "    sum_protected = 0.0\n",
+    "    sum_unprotected = 0.0\n",
+    "    size_protected = 0.0\n",
+    "    size_unprotected = 0.0\n",
+    "    for s in sensitive:\n",
+    "        value = float(s[1])\n",
+    "        if (value==1):\n",
+    "            size_protected +=1.0\n",
+    "        else:\n",
+    "            size_unprotected +=1.0    \n",
     "    for s in sensitive:\n",
     "        uid = s[0]\n",
     "        value = float(s[1])\n",
-    "        sum_protected += buy[uid] * value\n",
-    "        sum_unprotected += buy[uid] * (1 - value)\n",
+    "        sum_protected += buy[uid] * value #* (1/float(size_protected))\n",
+    "        sum_unprotected += buy[uid] * (1 - value) #* (1/float(size_unprotected))\n",
     "    protected = sum_protected - sum_unprotected\n",
-    "    unprotected = sum_unprotected - sum_protected\n",
+    "    unprotected = sum_unprotected -  sum_protected\n",
     "    constraint+=[ protected<=delta , unprotected<=delta]\n",
     "    return constraint \n",
     "    \n",
@@ -181,30 +188,37 @@
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
     "def convert_fairness_constraint2(sensitive, reachable, marketed, delta):\n",
     "    # marketed(u) & reachable (u,v) & sensitive (v)\n",
     "    # marketed(u) & reachable (u,v) & ~sensitive (v)\n",
-    "    sum_protected = 0\n",
-    "    sum_unprotected = 0\n",
+    "    sum_protected = 0.0\n",
+    "    sum_unprotected = 0.0\n",
     "    constraint = []\n",
     "    sensitive_dict = dict()\n",
+    "    size_protected = 0.0\n",
+    "    size_unprotected = 0.0\n",
     "    for s in sensitive:\n",
     "        uid = s[0]\n",
     "        value = float(s[1])\n",
+    "        if (value ==1):\n",
+    "            size_protected += 1.0\n",
+    "        else:\n",
+    "            size_unprotected += 1.0\n",
     "        sensitive_dict[uid] = value\n",
     "    for edge,value in reachable.items():\n",
     "        u = edge[0]\n",
     "        v = edge[1]\n",
-    "        if sensitive_dict[v]==1.0:\n",
-    "            sum_protected+= cvxpy.pos(marketed[u]+float(value)-1)\n",
-    "            sum_unprotected += 0\n",
-    "        else:\n",
-    "            sum_protected+= 0\n",
-    "            sum_unprotected += cvxpy.pos(marketed[u]+float(value)-1)\n",
+    "        if float(value) > 0.5:\n",
+    "            if sensitive_dict[v]==1.0:\n",
+    "                sum_protected+= marketed[u] #* (1/float(size_protected))\n",
+    "                #sum_protected+= cvxpy.pos(marketed[u]+float(value)-1)\n",
+    "            else:\n",
+    "                sum_unprotected += marketed[u] #* (1/float(size_unprotected))\n",
+    "                #sum_unprotected += cvxpy.pos(marketed[u]+float(value)-1)\n",
     "    protected = sum_protected - sum_unprotected\n",
     "    unprotected = sum_unprotected - sum_protected\n",
     "    constraint+=[ protected<=delta , unprotected<=delta]\n",
@@ -254,21 +268,19 @@
       "\n",
       "Sensitive\n",
       "==========\n",
-      "[('u0', 0.0), ('u1', 0.0), ('u2', 1.0), ('u3', 0.0), ('u4', 0.0)]\n"
-     ]
-    },
-    {
-     "ename": "DCPError",
-     "evalue": "Problem does not follow DCP rules.",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mDCPError\u001b[0m                                  Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-11-c924b4561710>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m    152\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    153\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 154\u001b[0;31m \u001b[0mmake_optimization\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msample_size\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m10\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mbudget\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m2\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdelta\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m0.001\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    155\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    156\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m<ipython-input-11-c924b4561710>\u001b[0m in \u001b[0;36mmake_optimization\u001b[0;34m(sample_size, budget, delta)\u001b[0m\n\u001b[1;32m    131\u001b[0m     \u001b[0mobjective\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcvxpy\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mMaximize\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mobjective_function\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    132\u001b[0m     \u001b[0mproblem\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcvxpy\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mProblem\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mobjective\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mconstraints\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 133\u001b[0;31m     \u001b[0mfinal_result\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mproblem\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msolve\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    134\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    135\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/Users/Gfarnadi/anaconda/lib/python3.5/site-packages/cvxpy/problems/problem.py\u001b[0m in \u001b[0;36msolve\u001b[0;34m(self, *args, **kwargs)\u001b[0m\n\u001b[1;32m    207\u001b[0m             \u001b[0;32mreturn\u001b[0m \u001b[0mfunc\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m*\u001b[0m\u001b[0margs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    208\u001b[0m         \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 209\u001b[0;31m             \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_solve\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0margs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    210\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    211\u001b[0m     \u001b[0;34m@\u001b[0m\u001b[0mclassmethod\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/Users/Gfarnadi/anaconda/lib/python3.5/site-packages/cvxpy/problems/problem.py\u001b[0m in \u001b[0;36m_solve\u001b[0;34m(self, solver, ignore_dcp, warm_start, verbose, parallel, **kwargs)\u001b[0m\n\u001b[1;32m    281\u001b[0m                       \"Solving a convex relaxation.\")\n\u001b[1;32m    282\u001b[0m             \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 283\u001b[0;31m                 \u001b[0;32mraise\u001b[0m \u001b[0mDCPError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Problem does not follow DCP rules.\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    284\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    285\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0msolver\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0ms\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mLS\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mDCPError\u001b[0m: Problem does not follow DCP rules."
+      "[('u0', 0.0), ('u1', 0.0), ('u2', 1.0), ('u3', 0.0), ('u4', 0.0)]\n",
+      "\n",
+      "Marketed results\n",
+      "==========\n",
+      "{'u2': 0.3205869356084069, 'u3': 0.2892734383694161, 'u4': 0.31133980519892146, 'u1': 0.28701406628198151, 'u0': 0.3096677265523568}\n",
+      "\n",
+      "Status of optimization\n",
+      "==========\n",
+      "optimal\n",
+      "\n",
+      "Optimal value\n",
+      "==========\n",
+      "4.999999999752374\n"
      ]
     }
    ],
@@ -366,6 +378,7 @@
     "            x+=1\n",
     "        reachables.append(reachable)\n",
     "     \n",
+    "    objective_function = 0.0\n",
     "    # make the optimization problem \n",
     "    for i in range (sample_size):\n",
     "        objective_function += make_objective(buys[i], reward)\n",
@@ -384,15 +397,13 @@
     "    # make the fairness constraints\n",
     "    for i in range (sample_size):\n",
     "        fairness_constraint1 = convert_fairness_constraint1(sensitive, buys[i], delta)\n",
-    "        constraints+=fairness_constraint1\n",
-    "        #fairness_constraint2 = convert_fairness_constraint2(sensitive, reachable, marketed, delta)\n",
+    "        #constraints+=fairness_constraint1\n",
+    "        fairness_constraint2 = convert_fairness_constraint2(sensitive, reachable, marketed, delta)\n",
     "        #constraints+=fairness_constraint2\n",
     "        \n",
     "    # make the range constraints [0,1]\n",
     "    for var, value in var_dict.items():\n",
     "        constraints += [0 <= value, value <= 1]\n",
-    "    \n",
-    "    \n",
     "    \n",
     "    #print('\\nObjective_function\\n%s'%('='*10))\n",
     "    #print(objective_function)\n",
@@ -402,6 +413,7 @@
     "    \n",
     "\n",
     "    # Solve the problem\n",
+    "    objective_function = objective_function* (1/float(sample_size))\n",
     "    objective = cvxpy.Maximize(objective_function)\n",
     "    problem = cvxpy.Problem(objective, constraints)\n",
     "    final_result = problem.solve()\n",
@@ -425,7 +437,7 @@
     "    print(problem.value)\n",
     "    \n",
     "    \n",
-    "make_optimization(sample_size=10, budget = 2, delta = 0.001)\n",
+    "make_optimization(sample_size=20, budget = 2, delta = 0.001)\n",
     "\n",
     "\n"
    ]
