--- a/viral_marketing_sampling.ipynb
+++ b/viral_marketing_sampling.ipynb
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -171,12 +171,12 @@
     "            reachable2 = float(r[5])\n",
     "        prob_distribution+=w2 * cvxpy.pos(cvxpy.pos(reachable1 + float(r[4])-1.0) - reachable2)\n",
     "        \n",
-    "    return prob_distribution,vid_dict"
+    "    return prob_distribution, vid_dict"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -184,14 +184,17 @@
    "source": [
     "def get_value_of_prob_distribution(prob_distribution, vid_dict, state):\n",
     "    value = 0.0\n",
-    "    #TODO: implement this part\n",
-    "    return value\n",
+    "    i = 0\n",
+    "    for key,value in vid_dict.items():\n",
+    "        vid_dict[key].value = state[i]\n",
+    "        i+=1\n",
+    "    return prob_distribution.value\n",
     "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
@@ -207,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true
    },
@@ -237,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {
     "collapsed": true
    },
@@ -251,20 +254,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
-    "def get_acceptance_rate(w1, w2, current_state, previous_state):\n",
-    "    accept =  min(1, get_value(w1, w2, current_state)/ get_value(w1, w2, previous_state))\n",
+    "def get_acceptance_rate(prob_distribution, vid_dict, current_state, previous_state):\n",
+    "    #accept =  min(1, get_value(w1, w2, current_state)/ get_value(w1, w2, previous_state))\n",
+    "    accept = min(1, get_value_of_prob_distribution(prob_distribution, vid_dict, current_state) \n",
+    "                 / get_value_of_prob_distribution(prob_distribution, vid_dict, previous_state))\n",
     "    return accept"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
@@ -277,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
@@ -289,12 +294,13 @@
     "    initial_sample = initialize_variables(rv_size)\n",
     "    sample = []\n",
     "    sample.append(initial_sample)\n",
+    "    prob_distribution, vid_dict = prob_distribution_function(w1,w2)\n",
     "    i=0\n",
     "    while len(sample)<sample_size+rejection_size+1:\n",
     "        previous_state = sample[-1]\n",
     "        #print(len(previous_state))\n",
     "        current_state = sample_from_distribution(previous_state, rv_size)\n",
-    "        acceptace = get_acceptance_rate(w1, w2, current_state, previous_state)\n",
+    "        acceptace = get_acceptance_rate(prob_distribution, vid_dict, current_state, previous_state)\n",
     "        if (acceptace>=1):\n",
     "            previous_state = current_state\n",
     "            sample.append(previous_state)\n",
@@ -310,6 +316,15 @@
     "#samples = sampling(1 , 1 , ['r1','r2','r3'], 10, 10)\n",
     "#print(samples)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
