add new psl model

--- a/soft/viral_marketing_decision_psl.ipynb
+++ b/soft/viral_marketing_decision_psl.ipynb
@@ -76,8 +76,8 @@
     "            line = line.split('\\t')\n",
     "            sensitive_data.append(tuple(line))\n",
     "    c.executemany('INSERT INTO user VALUES (?, 1.0)', user_data)\n",
-    "    c.executemany('INSERT INTO cost VALUES (?, 1.0)', user_data)\n",
-    "    c.executemany('INSERT INTO reward VALUES (?, 1.0)', user_data)\n",
+    "    c.executemany('INSERT INTO cost VALUES (?, -2.0)', user_data)\n",
+    "    c.executemany('INSERT INTO reward VALUES (?, 5.0)', user_data)\n",
     "    c.executemany('INSERT INTO sensitive VALUES (?, ?)', sensitive_data)\n",
     "    make_reachable()\n",
     "    conn.commit() "
@@ -137,13 +137,14 @@
    },
    "outputs": [],
    "source": [
-    "def convert_constraint1(marketed, buy):\n",
-    "    #marketed(u) & user(u) ->buy(u)\n",
+    "def convert_constraint1(marketed, buy, buy_from_marketing):\n",
+    "     #TODO: add buy from marketing\n",
+    "    #marketed(u) & buy_from_marketing(u) ->buy(u)\n",
     "    constraint = []\n",
     "    obj_function = 0.0\n",
     "    for uid,value in buy.items():\n",
-    "        obj_function+=cvxpy.pos(marketed[uid]-buy[uid])\n",
-    "        constraint.append(cvxpy.pos(marketed[uid]-buy[uid]))\n",
+    "        obj_function+=cvxpy.pos(cvxpy.pos(marketed[uid]+buy_from_marketing[uid]-1.0)-buy[uid])\n",
+    "        constraint.append(cvxpy.pos(cvxpy.pos(marketed[uid]+buy_from_marketing[uid]-1.0)-buy[uid]))\n",
     "        #constraint.append(marketed[uid]-buy[uid]<=0)\n",
     "    return constraint,obj_function"
    ]
@@ -156,8 +157,9 @@
    },
    "outputs": [],
    "source": [
-    "def convert_constraint2(reachable, buy):\n",
-    "    #reachable(u,v) & buy(u) -> buy(v)\n",
+    "def convert_constraint2(reachable, buy, buy_from_trust):\n",
+    "     #TODO: add buy from trust\n",
+    "    #reachable(u,v) & buy(u) & buy_from_trust(u,v)-> buy(v)\n",
     "    constraint = []\n",
     "    obj_function = 0.0\n",
     "    for edge,value in reachable.items():\n",
@@ -168,8 +170,12 @@
     "            value_num = 1.0\n",
     "        else:\n",
     "            value_num = 0.0 \n",
-    "        obj_function+=cvxpy.pos(cvxpy.pos(float(value_num)+buy[u]-1.0) - buy[v])\n",
-    "        constraint.append(cvxpy.pos(cvxpy.pos(float(value_num)+buy[u]-1.0) - buy[v]))\n",
+    "        if (buy_from_trust[edge]==True):\n",
+    "            buy_from_trust_value = 1.0\n",
+    "        else:\n",
+    "            buy_from_trust_value = 0.0\n",
+    "        obj_function+=cvxpy.pos(cvxpy.pos(cvxpy.pos(float(value_num)+buy[u]-1.0)+buy_from_trust_value -1) - buy[v])\n",
+    "        constraint.append(cvxpy.pos(cvxpy.pos(cvxpy.pos(float(value_num)+buy[u]-1.0)+buy_from_trust_value -1) - buy[v]))\n",
     "        #constraint.append(float(value)+buy[u]-buy[v]<=1)\n",
     "    return constraint, obj_function"
    ]
@@ -182,7 +188,8 @@
    },
    "outputs": [],
    "source": [
-    "def convert_constraint3(marketed, cost, budget):\n",
+    "def convert_constraint3(marketed, cost, budget, buy):\n",
+    "     #TODO: add buy\n",
     "    #∑ cost(u) * marketed(u) ≤ B\n",
     "    sum_cost = 0\n",
     "    for c in cost:\n",
@@ -388,11 +395,16 @@
     "        buys.append(buy)\n",
     "        #use samples for reachable\n",
     "        reachable = dict()\n",
+    "        buy_from_trust = dict()\n",
+    "        buy_from_marketing = dict()\n",
     "        for key in samples.keys():\n",
     "            e1,e2 = extract_edge(key)\n",
     "            edge = (e1,e2)\n",
     "            reachable[edge] = samples[key][i]\n",
     "        reachables.append(reachable)\n",
+    "        #TODO: use samples for buy_from_trust\n",
+    "        \n",
+    "        #TODO:use samples for buy_from_marketing\n",
     "    \n",
     "    objective_function = 0.0\n",
     "    # make the optimization problem \n",
@@ -401,18 +413,18 @@
     "    \n",
     "    # make the constraints\n",
     "    constraints = []\n",
-    "    function_constraint_3, obj_3 = convert_constraint3(marketed, cost, budget)\n",
-    "    #objective_function+=obj_3\n",
-    "    constraints+= function_constraint_3\n",
     "    for i in range (sample_size):\n",
-    "        function_constraint_1,obj_1 = convert_constraint1(marketed, buys[i])\n",
+    "        function_constraint_1,obj_1 = convert_constraint1(marketed, buys[i], buy_from_marketing[i])\n",
     "        #constraints+=function_constraint_1\n",
     "        objective_function+=1-obj_1\n",
-    "        function_constraint_2, obj_2 = convert_constraint2(reachables[i], buys[i])\n",
+    "        function_constraint_2, obj_2 = convert_constraint2(reachables[i], buys[i], buy_from_trust[i])\n",
     "        #constraints+=function_constraint_2\n",
     "        objective_function+=1-obj_2\n",
-    "    # make the fairness constraints\n",
-    "    for i in range (sample_size):\n",
+    "        function_constraint_3, obj_3 = convert_constraint3(marketed, cost, budget, buys[i])\n",
+    "        objective_function+=obj_3\n",
+    "        #constraints+= function_constraint_3\n",
+    "        ########################################\n",
+    "        # make the fairness constraints\n",
     "        fairness_constraint1 = convert_fairness_constraint1(sensitive, buys[i], delta)\n",
     "        #constraints+=fairness_constraint1\n",
     "        fairness_constraint2 = convert_fairness_constraint2(sensitive, reachable, marketed, delta)\n",
@@ -520,6 +532,7 @@
   }
  ],
  "metadata": {
+  "anaconda-cloud": {},
   "kernelspec": {
    "display_name": "Python [Root]",
    "language": "python",
